--- a/src/main/webapp/resources/scss/css/framework.css
+++ b/src/main/webapp/resources/scss/css/framework.css
@@ -29,8 +29,7 @@ html {
       border-color: #fff;
       background-image: linear-gradient(to bottom, #337ab7 0%, #23639a 100%); }
       html body .navbar-project .navbar-brand {
-        color: #fff;
-        border-right: 1px solid #fff; }
+        color: #fff; }
         html body .navbar-project .navbar-brand:hover {
           color: #fff;
           background-color: #23639a; }
@@ -149,11 +148,10 @@ html {
         html body .navbar-project .navbar-nav {
           border: 1px solid #fff; } }
     html body .cuerpo {
-      padding-top: 50px;
-      padding-bottom: 52px; }
+      margin-top: 51px;
+      margin-bottom: 92px; }
       html body .cuerpo .login {
-        margin: 10% auto;
-        padding: 0 20px;
+        margin: 50px auto;
         max-width: 515px; }
         html body .cuerpo .login .panel .panel-body ul li {
           color: #337ab7; }
@@ -161,6 +159,9 @@ html {
           border-top: 1px solid #337ab7;
           margin-top: 15px;
           margin-bottom: 15px; }
+    @media (max-width: 767px) {
+      html body .cuerpo {
+        margin-bottom: 152px; } }
     html body .footer-proyect {
       position: absolute;
       bottom: 0;
@@ -170,12 +171,70 @@ html {
       border-color: #fff;
       border-width: 1px 0 0 0; }
       html body .footer-proyect footer {
-        color: #fff;
-        margin-top: 2px; }
-      html body .footer-proyect .footer-module {
-        color: #fff;
-        padding: 15px; }
-        html body .footer-proyect .footer-module ul li {
-          list-style-type: none; }
+        color: #fff; }
+        html body .footer-proyect footer .footer-section {
+          border-top: 1px solid #fff; }
+        html body .footer-proyect footer .footer-module {
+          text-align: center; }
+          html body .footer-proyect footer .footer-module > ul {
+            margin-top: 10px; }
+            html body .footer-proyect footer .footer-module > ul > li:not(:first-child):before {
+              content: " | ";
+              color: #fff;
+              margin-right: 8px; }
+            html body .footer-proyect footer .footer-module > ul > li > a {
+              color: #fff;
+              cursor: pointer; }
+        html body .footer-proyect footer .footer-copyright {
+          margin-top: 15px;
+          margin-right: 15px;
+          margin-bottom: 15px;
+          text-align: right; }
+        @media (max-width: 1199px) {
+          html body .footer-proyect footer .footer-copyright {
+            margin-right: 0px;
+            text-align: center; } }
+
+.dropdown .dropdown-menu:before {
+  position: absolute;
+  top: -7px;
+  left: 9px;
+  display: inline-block;
+  border-right: 7px solid transparent;
+  border-bottom: 7px solid #ccc;
+  border-left: 7px solid transparent;
+  border-bottom-color: rgba(0, 0, 0, 0.2);
+  content: ''; }
+
+.dropdown .dropdown-menu:after {
+  position: absolute;
+  top: -6px;
+  left: 10px;
+  display: inline-block;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid #ffffff;
+  border-left: 6px solid transparent;
+  content: ''; }
+
+.dropup .dropdown-menu.pull-right:before {
+  position: absolute;
+  bottom: -7px;
+  right: 9px;
+  display: inline-block;
+  border-right: 7px solid transparent;
+  border-top: 7px solid #ccc;
+  border-left: 7px solid transparent;
+  border-top-color: rgba(0, 0, 0, 0.2);
+  content: ''; }
+
+.dropup .dropdown-menu.pull-right:after {
+  position: absolute;
+  bottom: -6px;
+  right: 10px;
+  display: inline-block;
+  border-right: 6px solid transparent;
+  border-top: 6px solid #ffffff;
+  border-left: 6px solid transparent;
+  content: ''; }
 
 /*# sourceMappingURL=framework.css.map */
