--- a/src/main/webapp/resources/scss/framework.scss
+++ b/src/main/webapp/resources/scss/framework.scss
@@ -23,7 +23,6 @@ html {
             background-image: $imagenFondo;
             .navbar-brand {
                 color: $colorTextoPrimario;
-                border-right: 1px solid #fff;
                 &:hover {
                     color: $colorTextoHover;
                     background-color: $colorFondoHover;
@@ -204,15 +203,14 @@ html {
             }
         }
         .cuerpo {
-            padding-top: 50px;
-            padding-bottom: 52px;
+            margin-top: 51px;
+            margin-bottom: 92px;
             .login {
-                margin: 10% auto;
-                padding: 0 20px;
+                margin: 50px auto;
                 max-width: 515px;
                 .panel {
                     .panel-heading {
-                        
+
                     }
 
                     .panel-body {
@@ -230,6 +228,11 @@ html {
                 }
             }
         }
+        @media (max-width: 767px) {
+            .cuerpo {
+                margin-bottom: 152px;
+            }
+        }
         .footer-proyect {
             position: absolute;
             bottom: 0;
@@ -240,17 +243,87 @@ html {
             border-width: 1px 0 0 0;
             footer {
                 color: $colorFondoSecundario;
-                margin-top: 2px;
-            }
-            .footer-module {
-                color: $colorFondoSecundario;
-                padding: 15px;
-                ul {
-                    li {
-                        list-style-type: none;
+                .footer-section {
+                    border-top: 1px solid #fff;
+                }
+                .footer-module {
+                    text-align: center;
+                    > ul {
+                        margin-top: 10px;
+                        > li {
+                            &:not(:first-child):before {
+                                content: " | ";
+                                color: #fff;
+                                margin-right: 8px;
+                            }
+                            > a {
+                                color: #fff;
+                                cursor: pointer;
+                            }
+                        }
+                    }
+                }
+                
+                .footer-copyright {
+                    margin-top: 15px;
+                    margin-right: 15px;
+                    margin-bottom: 15px;
+                    text-align: right;
+                }
+                
+                @media (max-width: 1199px) {
+                    .footer-copyright {
+                        margin-right: 0px;
+                        text-align: center;
                     }
                 }
             }
         }
     }
+}
+
+.dropdown .dropdown-menu:before {
+  position: absolute;
+  top: -7px;
+  left: 9px;
+  display: inline-block;
+  border-right: 7px solid transparent;
+  border-bottom: 7px solid #ccc;
+  border-left: 7px solid transparent;
+  border-bottom-color: rgba(0, 0, 0, 0.2);
+  content: '';
+}
+
+.dropdown .dropdown-menu:after {
+  position: absolute;
+  top: -6px;
+  left: 10px;
+  display: inline-block;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid #ffffff;
+  border-left: 6px solid transparent;
+  content: '';
+}
+
+.dropup .dropdown-menu.pull-right:before {
+  position: absolute;
+  bottom: -7px;
+  right: 9px;
+  display: inline-block;
+  border-right: 7px solid transparent;
+  border-top: 7px solid #ccc;
+  border-left: 7px solid transparent;
+  border-top-color: rgba(0, 0, 0, 0.2);
+  content: '';
+}
+
+.dropup .dropdown-menu.pull-right:after {
+  position: absolute;
+  bottom: -6px;
+  right: 10px;
+  display: inline-block;
+  border-right: 6px solid transparent;
+  border-top: 6px solid #ffffff;
+  border-left: 6px solid transparent;
+  content: '';
 }
