--- a/src/main/webapp/resources/scss/css/main.css
+++ b/src/main/webapp/resources/scss/css/main.css
@@ -4,7 +4,7 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
 /* 
-    Created on : 13-jul-2016, 20:40:38
+    Created on : 04-ago-2017, 17:13:00
     Author     : Rafael Benavides
 */
 /*
@@ -18,6 +18,15 @@ and open the template in the editor.
 */
 /* - Variables Globales - */
 /* - Mixin - */
+/*
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+*/
+/* 
+    Created on : 13-jul-2016, 20:40:38
+    Author     : Rafael Benavides
+*/
 html {
   position: relative;
   min-height: 100%; }
@@ -236,4 +245,4 @@ html {
   border-left: 6px solid transparent;
   content: ''; }
 
-/*# sourceMappingURL=framework.css.map */
+/*# sourceMappingURL=main.css.map */
